--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 annotated-types==0.7.0
 anyio==4.9.0
+beautifulsoup4==4.14.2
 certifi==2025.4.26
+charset-normalizer==3.4.4
 exceptiongroup==1.2.2
 h11==0.16.0
 httpcore==1.0.9
@@ -9,7 +11,13 @@ idna==3.10
 ollama==0.4.8
 pydantic==2.11.4
 pydantic_core==2.33.2
+python-dotenv==1.1.1
+requests==2.32.5
 sniffio==1.3.1
+soupsieve==2.8
 tqdm==4.67.1
 typing-inspection==0.4.0
 typing_extensions==4.13.2
+Unidecode==1.4.0
+urllib3==2.5.0
+wikipedia==1.4.0
